--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,19 @@ data/*.db
 
 # IDE
 .vscode/
+
+# backups / editor junk
+*.bak
+*.bak.*
+*.bak_*
+*.swp
+*.swo
+*~
+..env.swp
+
+# db files
+*.db
+*.sqlite
+*.sqlite3
+
+# uploads already excluded
