chore: remove local backups/db from repo

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ data/*.db
 *.sqlite3
 
 # uploads already excluded
+
+# backups / swaps
+*.bak*
+*.swp
+*.swo
+
+# sqlite/db
+*.db
+*.db.*
+data/*.db*
